update email setting and filter product

--- a/TechStore.API/appsettings.Development.json
+++ b/TechStore.API/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUser": "hieultse161727@fpt.edu.vn",
+    "SmtpPassword": "glnnorbfwfqmkxrp",
+    "FromEmail": "noreply@techstore.com",
+    "FromName": "TechStore",
+    "EnableSsl": "true"
   }
 }
