--- a/TechStore.API/appsettings.json
+++ b/TechStore.API/appsettings.json
@@ -1,18 +1,1 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(Local);Initial Catalog=TechStore;Persist Security Info=True;User ID=sa;Password=123456;TrustServerCertificate=True;Encrypt=True"
-  },
-  "JwtSettings": {
-    "SecretKey": "TechStore-Secret-Key-For-JWT-Authentication-2026",
-    "Issuer": "TechStoreAPI",
-    "Audience": "TechStoreClient",
-    "AccessTokenExpiryMinutes": 60
-  }
-}
+{"Logging":{"LogLevel":{"Default":"Information","Microsoft.AspNetCore":"Warning"}},"AllowedHosts":"*","ConnectionStrings":{"DefaultConnection":"Data Source=(Local);Initial Catalog=TechStore;Persist Security Info=True;User ID=sa;Password=123456;TrustServerCertificate=True;Encrypt=True"},"JwtSettings":{"SecretKey":"TechStore-Secret-Key-For-JWT-Authentication-2026","Issuer":"TechStoreAPI","Audience":"TechStoreClient","AccessTokenExpiryMinutes":60},"EmailSettings":{"SmtpHost":"","SmtpPort":"587","SmtpUser":"","SmtpPassword":"","FromEmail":"","FromName":"TechStore","EnableSsl":"true"}}
